Fixed clipping issue

--- a/src/WebComponents/App/app.scss
+++ b/src/WebComponents/App/app.scss
@@ -161,7 +161,6 @@
                 -moz-flex: 0 1 auto;
                 -ms-flex: 0 1 auto;
                 flex: 0 1 auto;
-                overflow: hidden;
                 margin-top: calc(var(--theme-h1) + var(--theme-h5) * 2);
                 z-index: 1;
             }
